--- a/addresspickerdialoglibrary/src/main/res/layout/user_layout_address_bottom_sheet_dialog.xml
+++ b/addresspickerdialoglibrary/src/main/res/layout/user_layout_address_bottom_sheet_dialog.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="560dp"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingStart="12dp"
     android:paddingEnd="12dp">
@@ -32,5 +32,6 @@
         android:id="@+id/user_rv_dialog_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>
 </LinearLayout>
